# AIGen

./: .Rhistory  .gitignore  KNN.sln  README.md  README.rst  release.rar  test.txt
Code/: CMakeLists.txt
Code/include/: Basis.h  CommonFunc.h  DataManager.h  KNN_Imp.h  KernelExpansion.h  KernelGenerator.h  KernelManage.h  LinearRegression.h  MINQUE0.h  MinqueBase.h  Options.h  Prediction.h  SplineBasis.h  helper_string.h  imnq.h
Code/src/: KNN_Imp.cpp  KernelExpansion.cpp  KernelManage.cpp  LinearRegression.cpp  MINQUE0.cpp  MNQTest.cpp  NN.cpp  Options.cpp  Random.cpp  ToolKit.cpp  imnq.cpp
KNN/: Batch.cpp  Batch.h  CMakeLists.txt  CheckMode.cpp  CommonFunc.cpp  CommonFunc.h  DataManager.cpp  DataManager.h  KNN.filters  KNN.vcxproj  KNN.vcxproj.filters  KernelExpansion.cpp  KernelExpansion.h  KernelGenerator.cpp  KernelGenerator.h  KernelManage.cpp  KernelManage.h  LinearRegression.cpp  LinearRegression.h  Main.cpp  Makefile  MinqueBase.cpp  MinqueBase.h  Options.cpp  Options.h  PlinkReader.cpp  PlinkReader.h  Random.cpp  Random.h  ToolKit.cpp  ToolKit.h  cLog.h  clog.cpp  cuMINQUE.cpp  cuMINQUE.h  cuMatrix.cu  cuMatrix.cuh  cuToolkit.cpp  cuToolkit.h  imnq.cpp  (+6 more)
KNN/include/: Batch.h  Bootstrap.h  Bspline.h  CommonFunc.h  DataManager.h  Davies.h  FNN.h  Haar.h  KNN_Imp.h  KernelExpansion.h  KernelGenerator.h  KernelManage.h  Layer.h  LinearRegression.h  MINQUE0.h  MINQUE1.h  MNQTest.h  MinqueBase.h  NN.h  PlinkReader.h  Prediction.h  Random.h  TensorCommon.h  TensorData.h  ToolKit.h  cuMINQUE0.h  cuMINQUE1.h  cuMatrix.cuh  cuMinqueBase.h  cuToolkit.h  cuimnq.h  easylogging++.h  imnq.h  logger.h  rln_mnq.h
KNN/src/: Batch.cpp  Bootstrap.cpp  Bspline.cpp  CommonFunc.cpp  DataManager.cpp  Davies.cpp  FNN.cpp  Haar.cpp  KNN_Imp.cpp  KernelExpansion.cpp  KernelGenerator.cpp  KernelManage.cpp  LinearRegression.cpp  MINQUE0.cpp  MINQUE1.cpp  Main.cpp  MinqueBase.cpp  NN.cpp  Options.cpp  PlinkReader.cpp  Prediction.cpp  Random.cpp  SplineBasis.cpp  TensorData.cpp  ToolKit.cpp  chi2comb.cpp  cuMINQUE0.cpp  cuMINQUE1.cpp  cuMatrix.cu  cuMinqueBase.cpp  cuToolkit.cpp  cuimnq.cpp  easylogging++.cpp  imnq.cpp  logger.cpp  rln_mnq.cpp
MINQUE/: Algebra.cu  Algebra.cuh  CheckMode.cpp  CheckMode.h  CommonFunc.cpp  CommonFunc.h  DataManager.cpp  DataManager.h  Exception.cpp  Exception.h  KernelCompute.cpp  KernelCompute.h  KernelManage.cpp  KernelManage.h  LinearRegression.cpp  MINQUE.cpp  MINQUE.h  MINQUE.vcxproj  MINQUE.vcxproj.filters  MINQUE_original.cpp  MINQUE_original.h  Main.cpp  MatFunc.cpp  MatFunc.h  MinqueBase.cpp  MinqueBase.h  Options.cpp  PlinkReader.cpp  PlinkReader.h  Random.cpp  Random.h  ToolKit.cpp  ToolKit.h  cLog.h  clog.cpp  cuMINQUE.cpp  cuMINQUE.h  cuMatrix.cpp  cuMatrix.cu  cuMatrix.h  (+14 more)
Sample/: out.txt  phenW.1.phen
example/: Covs.txt  kernel3.grm.id  mltgrm  phenW.1.phen  sample .bim  sample.bed  y.txt
